styles/projectView/projectTasks.css
/* Tasks styles */

.tasksWrapper {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5em;
  height: 100%;
  width: 100%;
}

.tasksWrapper h2 {
  display: block;
  width: 100%;
  padding: 0 0 0 0.5em;
  color: #999;
  font-size: 1.5em;
}

.newTaskBtn {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 3em;
  flex-shrink: 0;
  width: 100%;
  padding: 0 1em;
  background-color: #fff;
  border: #ccc dashed 2px;
  border-radius: 0.5em;
}

.newTaskBtn h1 {
  margin: 0;
  font-size: 1.2em;
  color: #777;
  transition: font-size 0.2s;
}

.newTaskBtn .fa-folder {
  margin: 0 0.4em 0 0 ;
  color: #ddd;
}

.newTaskBtn i.fa-plus { 
  margin: 0 0 0 1em;
  font-size: 2.5em;
  color: #ccc;
  transition: font-size 0.2s;
}

.newTaskBtn:hover {
  background-color: #f8f8f8;
  cursor: pointer;
}

.newTaskBtn:hover h1 {
  margin: 0;
  font-size: 1.4em;
  transition: font-size 0.2s;
}

.newTaskBtn:hover i.fa-plus { 
  font-size: 3em;
  transition: font-size 0.2s;
}

.projectView .tasksList {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5em;
  width: 100%;
  flex-grow: 1; /* growing vertically */
  overflow: scroll;
  padding: 0.5em 0 0.5em 0;
  border-bottom: #111 1px dashed;
  border-top: #111 1px dashed;
}

.projectView .tasksList::-webkit-scrollbar {
  display: none;
}

.projectView .tasksList .task {
  position: relative;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
  flex-shrink: 0;
  gap: 0.5em;
  height: 4em;
  width: 100%;
  padding: 0 1em;
  background-color: #fff;
  border: #111 solid 1px;
  border-radius: 0.5em;
}

.projectView .task:hover {
  box-shadow: 
  0 0.125em 0.375em rgba(0, 0, 0, 0.1),         
  0 0.25em 0.75em rgba(0, 0, 0, 0.15); 
  cursor: pointer;
}

.projectView .task .fa-rectangle-list {
  margin: 0 0 0 0;
}

.projectView .task .taskName {
  flex-grow: 1;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.projectView .task .taskStatusBubble {
  display: inline-block;
  padding: 0.3em 0.6em;
  font-size: 0.8em;
  color:#333;
  border-radius: 1em;
  border: #333 solid 1px;
}

.projectView .task .taskStatusBubble.statusShowingComplete {
  background-color: #b3f69f;
}

.projectView .task .taskStatusBubble.statusShowingPlanned {
  background-color: #4a97ca;
  color: #fff;
}

.projectView .task .taskStatusBubble.statusShowingInProgress {
  background-color: #e7f661;
}

.projectView .task .taskStatusBubble.statusShowingPaused {
  background-color: #ffbb61;
}

.projectView .task .taskStatusBubble.statusShowingDelayed {
  background-color: #e95e45;
}

.projectView .task .taskStatusBubble.statusShowingDead {
  background-color: #111;
  color: #fff;
}

